--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+.app {
+  background: #9dcceb;;
+  padding: 30px;
+  height: 100vh;
+  margin: o auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-list {
+  background: #ffe4e4;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 400px;
+  margin:auto;
 }
+.todo{
+  background: #fff;
+display: flex;
+justify-content: space-between;
+padding: 3px 8px;
+margin-bottom: 8px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+border-radius: 3px;
+
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input{
+  width: 30%;
+  height: 30px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+form{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    justify-content: center;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  text-align: center;
 }
