--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   background: #ffe4e4;
   border-radius: 4px;
   padding: 5px;
-  max-width: 400px;
+  max-width: 600px;
   margin:auto;
 }
 .todo{
@@ -17,9 +17,7 @@ display: flex;
 justify-content: space-between;
 padding: 3px 8px;
 margin-bottom: 8px;
-
 border-radius: 3px;
-
 }
 .input{
   width: 30%;
@@ -34,6 +32,7 @@ form{
 h1{
   text-align: center;
 }
-.right{display: flex;
+.output-decoration{
+  display: contents;
 
 }
