--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@ h1{
   display: contents;
 
 }
+.BOX-2 input{
+  background: transparent;
+  border:0;
+
+}
+.BOX-2 input:focus{
+  outline:none;
+}
+.status-todo{
+  max-width: 600px;
+  margin:auto;
+  height: 20px;
+  background:#fff;
+  border-radius: 4px;
+  padding: 5px;
+  text-align: center;
+
+}
+.status-todo a{
+  text-decoration: none;
+  margin:0 5px;
+}
